reads over conclusion

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -959,12 +959,12 @@ performance.
 \section{Discussion}\label{section:conclusion}
 
 This manuscript has explored the performance of \numberofstrategies strategies
-of the Iterated Prisoner's Dilemma in a large number of computer tournaments.
+of the IPD in a large number of computer tournaments.
 We analyzed and extracted the salient features of the best performing strategies
-across various tournament types, casting the results in terms of Axelrod's
+across various tournament types, casting the results in terms of R. Axelrod's
 original suggested features of good IPD strategies. Moreover, our results
 shed light on the historic performance of TFT, zero-determinant strategies,
-and memory one strategies generally. Strategies need to match their play
+and memory-one strategies generally. Strategies need to match their play
 to the cooperativeness of the tournament population and do so in a way that
 prevents or minimizes exploitation. Overall we see that complex or clever
 strategies can be effective, whether trained against a corpus of possible
@@ -1037,7 +1037,7 @@ tournaments (ZDs were included), these strategies benefited by being a bit
 envious. From Section~\ref{section:evaluation_of_performance} it was concluded
 that there is a significant importance in adapting to the environment, and more
 specifically in this work, to the mean cooperator. This section also
-demonstrated that a strategy should reciprocate, as suggested by Axelrod, but in
+demonstrated that a strategy should reciprocate, as suggested by R. Axelrod, but in
 some environments, such as standard and noisy, it should relax its readiness to
 do so.
 
@@ -1047,9 +1047,9 @@ are:
 
 \begin{itemize}
 \item be nice, if the environment isn't noisy and the games are long
-    \item be provocable and contrite, 
-    \item be a little envious, 
-    \item it's ok to be clever, 
+    \item be provocable and forgiving,
+    \item be a little envious,
+    \item it's ok to be clever,
     \item adapt to the environment (including the population of strategies).
 \end{itemize}
 
